k8s/idgen/idgen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idgen-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: idgen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idgen
                port:
                  number: 80
